Closed
Bug 1353529
Opened 8 years ago
Closed 8 years ago
Crash when using IntersectionObserver in XUL pages
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla55
People
(Reporter: tschneider, Assigned: tschneider)
References
Details
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
mstange
:
review+
gchang
:
approval-mozilla-beta+
|
Details |
Using the IntersectionObserver API in XUL pages (e.g. in Add-Ons) causes crashes when trying to get to the root scrolling element.
STR:
Install the "Brief" feed reading extension from the Add-on marketplace.
Open the Mozilla Blog feed.
As of today, clicking on the feed entry with the title "A Public-Private Partnership for Gigabit Innovation and Internet Health" reproducibly causes a crash.
Crash reports:
https://crash-stats.mozilla.com/signature/?version=55.0a1&signature=mozilla%3A%3Adom%3A%3ADOMIntersectionObserver%3A%3AUpdate&date=%3E%3D2017-03-27T22%3A16%3A00.000Z&date=%3C2017-04-03T22%3A16%3A00.000Z&_columns=date&_columns=product&_columns=version&_columns=build_id&_columns=platform&_columns=reason&_columns=address&_columns=install_time&_sort=-date&page=1#reports
| Assignee | ||
Updated•8 years ago
|
Assignee: nobody → tschneider
| Comment hidden (mozreview-request) |
Comment 2•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8854682 [details]
Bug 1353529 - Crash when using IntersectionObserver in XUL pages.
https://reviewboard.mozilla.org/r/126640/#review129192
::: dom/base/DOMIntersectionObserver.cpp:284
(Diff revision 1)
> }
> }
> } else {
> nsCOMPtr<nsIPresShell> presShell = aDocument->GetShell();
> if (presShell) {
> rootFrame = presShell->GetRootScrollFrame();
Couldn't this also return null?
Attachment #8854682 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 3•8 years ago
|
||
It would if directly used in a XUL only document. We don't support that and would pass the intersection test by checking for null value later in the file. Our issue here was that an HTML document was embedded in XUL via an iframe, so that call returned the iframe's root scroll element but crashed when trying to walk up the presContext chain.
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Comment 4•8 years ago
|
||
can't land this via autolander because of one open issue it seems. Can you take a look, thanks!
Flags: needinfo?(tschneider)
Keywords: checkin-needed
Comment 5•8 years ago
|
||
I've dropped the issue, can you try again? Thanks.
Flags: needinfo?(tschneider) → needinfo?(cbook)
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a628de1a8a06
Crash when using IntersectionObserver in XUL pages. r=mstange
Comment 7•8 years ago
|
||
(In reply to Markus Stange [:mstange] from comment #5)
> I've dropped the issue, can you try again? Thanks.
done
Flags: needinfo?(cbook)
Comment 8•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment 9•8 years ago
|
||
Please request Aurora approval on this when you get a chance. Might as well have it already landed by the time you're looking to re-enable there :)
Updated•8 years ago
|
Flags: needinfo?(bugs)
| Assignee | ||
Comment 10•8 years ago
|
||
Comment on attachment 8854682 [details]
Bug 1353529 - Crash when using IntersectionObserver in XUL pages.
Approval Request Comment
[Feature/Bug causing the regression]: 1243846
[User impact if declined]: Crashes in popular RSS reader add-ons
[Is this code covered by automated tests?]: Yes
[Has the fix been verified in Nightly?]: Yes
[Is the change risky?]: No
Flags: needinfo?(tschneider)
Attachment #8854682 -
Flags: approval-mozilla-beta?
Comment 11•8 years ago
|
||
Comment on attachment 8854682 [details]
Bug 1353529 - Crash when using IntersectionObserver in XUL pages.
Fix a crash when using IntersectionObserver. Beta54+. Should be in 54 beta 6.
Attachment #8854682 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 12•8 years ago
|
||
| bugherder uplift | ||
Updated•8 years ago
|
Flags: needinfo?(bugs)
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•