Bug 1353529 - Crash when using IntersectionObserver in XUL pages. r=mstange

MozReview-Commit-ID: 9RBrnst4Wkb